--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </footer>
 
      <!-- JavaScript -->
-     <script src="app.js"></script>
+     <script src="assets/js/app.js"></script>
 
 </body>
 
