--- a/index.html
+++ b/index.html
@@ -84,13 +84,15 @@
                 <img src="assets/images/pinterestcopia.jpg" alt="Pinterest interface" loading="lazy" class="project-pic">
                 <h3 class="project-title">Pinterest Interface</h3>
                 <p class="project-details">This project is a clone of the Pinterest home interface, created purely with HTML5 and CSS3</p>
-                <a href="https://github.com/karly1709/Clon_pinterest.git" target="_blank">Check it out!</a>
+                <a href="https://github.com/karly1709/Clon_pinterest.git" target="_blank">Check it out Gibhut!</a><br>
+                <a href="https://clon-pinterest-swart.vercel.app/" target="_blank">Check it out Vercel!</a>
             </div>
             <div class="project-container project-card">
                 <img src="assets/images/dualipa.jpg" alt="Website Dua Lipa" loading="lazy" class="project-pic">
                 <h3 class="project-title">Website Dua Lipa</h3>
                 <p class="project-details">This is a website project about the biography and social media of Dua Lipa, created purely with HTML5 and CSS3</p>
-                <a href="https://github.com/karly1709/DUA-LIPA.git" target="_blank">Check it out!</a>
+                <a href="https://github.com/karly1709/DUA-LIPA.git" target="_blank">Check it out Gibhut!</a><br>
+                <a href="https://dua-lipa-chi.vercel.app" target="_blank">Check it out Vercel!</a>
             </div>
         </div>
     </section>
